# debbi-log-bk

./: Dockerfile  database.py  env.py  hook.py  main.py  pyproject.toml  requirements.txt  swift.db
dependencies/: auth_dependencies.py
dto/: dispatch_dto.py  user_dto.py
migrations/models/: 0_20250521124915_init.py
models/: __init__.py  base_model.py  dispatch_model.py  user_model.py
routers/: auth_router.py  dispatch_router.py
services/: auth_sevice.py  dispatch_service.py
